apps/base/tempo/middleware-external.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tempo-push-auth
  namespace: tempo
spec:
  basicAuth:
    secret: tempo-push-auth
