apps/base/tempo/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tempo-strip-prefix
  namespace: tempo
spec:
  stripPrefix:
    prefixes:
      - /tempo
